# PseudoFS

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.claude/: settings.json
.claude/skills/add-command/: SKILL.md
.claude/skills/add-module/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/disk-debug/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/test-fs/: SKILL.md
.claude/skills/tui-guide/: SKILL.md
docs/: 全流程测试.md  协作手册.md  学习指导.md  演示流程脚本.md  课设要求.md  项目需求.md  验收分工表.md
docs/进度记录/: day2-进度报告.md  day3-进度报告.md  day4-进度报告.md  day5-进度报告.md  day6-进度报告.md  day7-进度报告.md
include/core/: block_device.h  constants.h  open_file_table.h  user_manager.h  vfs.h
include/fs/fat16/: fat16_fs.h
include/fs/unix/: directory.h  inode.h  super_block.h  unix_fs.h
include/shell/: command_registry.h
include/tui/: tui.h
src/: main.cpp
src/core/: block_device.cpp  open_file_table.cpp  user_manager.cpp
src/fs/fat16/: fat16_fs.cpp
src/fs/unix/: directory.cpp  inode.cpp  super_block.cpp  unix_fs.cpp
src/shell/: command_registry.cpp
src/tui/: tui.cpp
tests/: stub_fs.h  test_block_device.cpp  test_command_registry.cpp  test_directory.cpp  test_e2e.cpp  test_fat16.cpp  test_inode.cpp  test_integration_registry.cpp  test_open_file_table.cpp  test_sanity.cpp  test_super_block.cpp  test_tui.cpp  test_unix_fs.cpp  test_user_manager.cpp
tools/: inode_dump.py
